Small fix on the css, to keep the slider to overlap with the Map combo box in the mobile app

--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -204,7 +204,7 @@
   right: 0;
   width: 30%;
   min-width: 400px;
-  margin-top: 2vh;
+  margin-top: 80px;
   margin-right: 1vw;
   color: white;
   background-color: transparent;
